[gd_scene load_steps=7 format=2]

[ext_resource path="res://LaserSight/laser_holder.png" type="Texture" id=1]
[ext_resource path="res://LaserSight/LaserSight.gd" type="Script" id=2]
[ext_resource path="res://Sounds/alarm.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/laser.wav" type="AudioStream" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 glow_color: hint_color = vec4(1.0);
uniform vec4 color: hint_color = vec4(1.0);

void fragment() {
	vec4 new_color = color;
	
	// glow
	if (new_color.r > 0f) new_color = (new_color + glow_color);	
	
	COLOR = new_color;
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/glow_color = Color( 0.97, 0.49082, 0.4171, 1 )
shader_param/color = Color( 1, 0, 0, 1 )

[node name="LaserSight" type="Node2D"]
script = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
material = SubResource( 2 )
points = PoolVector2Array( 0, 0, 0, 7 )
width = 1.0

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, 500 )
collision_mask = 19

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )

[node name="Stop" type="Timer" parent="."]
one_shot = true

[node name="Work" type="Timer" parent="."]
one_shot = true

[node name="Siren" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Laser" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0
autoplay = true
max_distance = 125.0
[connection signal="hit" from="." to="." method="_on_LaserSight_hit"]
[connection signal="stop_working" from="." to="." method="_on_LaserSight_stop_working"]
[connection signal="work" from="." to="." method="_on_LaserSight_work"]
[connection signal="timeout" from="Stop" to="." method="_on_Stop_timeout"]
[connection signal="timeout" from="Work" to="." method="_on_Work_timeout"]
[connection signal="finished" from="Laser" to="." method="_on_Laser_finished"]
